<resources>
    <string name="menu_delete_text">verwijderen</string>
    <string name="load_more">Laat nog een maand zien</string>
    <string name="detail_title_placeholder">Cool Title Of Some Movie</string>
    <string name="dialog_text_website">Wilt u boerenmedical.com in uw browser openen?</string>
    <string name="dialog_text_webshop">Wilt u shop.boerenmedical.com in uw browser openen?</string>
    <string name="dialog_title_website">Website</string>
    <string name="title_notice_noreminders">Nog geen herinneringen</string>
    <string name="dialog_title_webshop">Webshop</string>
    <string name="dialog_title_meter">Verbonden meters</string>
    <string name="dialog_text_meterdelete">Weet u zeker dat u deze meter wil ontkoppelen?</string>
    <string name="title_meteradd">Zoek naar BLE meters</string>
    <string name="title_meteravilable">Beschikbaar BLE meters</string>
    <string name="dialog_save_bloedglucosemeten">Bewaar</string>
    <string name="websiteurl">http://www.boerenmedical.com</string>
    <string name="webshopurl">http://shop.boerenmedical.com</string>
    <string name="dialog_button_cancel_website">Annuleer</string>
    <string name="dialog_button_open_website">Open</string>
    <string name="app_name">Appsuline</string>
    <string name="dairy">Dagboek</string>
    <string name="reminder">Herinneringen</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="info">Informatie</string>
    <string name="settings">Instellingen</string>
    <string name="pdf">PDF</string>
    <string name="van">Van</string>
    <string name="totenmet">Tot en Met</string>
    <string name="dagen">Dagen</string>
    <string name="alledagen">Alle dagen</string>
    <string name="alleenuitelichte">Alleen uitgelichte dagen</string>
    <string name="bekijkpdf">Bekijk PDF</string>
    <string name="gemiddeldebloedwaarde">Laatst gemeten bloedglucosewaarde</string>
    <string name="totalkoolhydraten">Totaal aantal koolhydraten</string>
    <string name="totaleenhedeninsuline">Totaal aantal eenheden insuline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Algemene">Algemene Informatie</string>
    <string name="Diabetes">Diabetes</string>
    <string name="Injectielocaties">Injectielocaties</string>
    <string name="Injectietechniek">Injectietechniek</string>
    <string name="Naaldlengte">Naaldlengte</string>
    <string name="Insulinepomp">Insulinepomp</string>
    <string name="Prikken">Prikken</string>
    <string name="Wisselen">Wisselen</string>
    <string name="Hypo">Hypo</string>
    <string name="Hyper">Hyper</string>
    <string name="Instellingen">Instellingen</string>
    <string name="Persoonlijkegegevens">Persoonlijke gegevens</string>
    <string name="Streefwaardes">Streefwaardes</string>
    <string name="Help">Help</string>
    <string name="Handleiding">Handleiding</string>
    <string name="Meldingsstijlaanpassen">Meldingsstijl aanpassen</string>
    <string name="Bluetoothmeterkoppelen">Bluetoothmeter koppelen</string>
    <string name="BorenMedical">Boeren Medical</string>
    <string name="OverBoerenMedical">Over Boeren Medical</string>
    <string name="Website">Website</string>
    <string name="Webshop">Webshop</string>
    <string name="Feedback">Feedback</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="Title_InfoDiabetes">Diabetes</string>
    <string name="Title_Injectielocaties">Injectielocaties</string>
    <string name="Title_Injectietechniek">Injectietechniek</string>
    <string name="Title_Naaldlengte">Naaldlengte</string>
    <string name="Title_Insulinepomp">Insulinepomp</string>
    <string name="Title_Prikken">Prikken</string>
    <string name="Title_Wisselen">Wisselen</string>
    <string name="Title_Hypo">Hypo</string>
    <string name="Title_v4">DM Mini V4  Koppelen</string>
    <string name="Title_Hyper">Hyper</string>
    <string name="title_overboerenmedical">Over Boeren Medical</string>
    <string name="title_overboerenmedical_webshop">WEBSHOP:</string>
    <string name="title_overboerenmedical_diabetes">DIABETES&amp;:</string>
    <string name="title_overboerenmedical_diabetes_service">DIABETES SERVICE SPREEKUUR:</string>
    <string name="title_bluetoothmeter_koppelen">Bluetoothmeter koppelen</string>
    <string name="title_bluetoothmeter_koppelen_eerste">EERSTE KEER GEBRUIK</string>
    <string name="title_bluetoothmeter_koppelen_appinstellen">APP INSTELLEN</string>
    <string name="title_bluetoothmeter_koppelen_geschikte">GESCHIKTE APPARATEN</string>
    <string name="selectall">Alles selecteren</string>
    <string name="Text_OverBoeren">Boeren Medical, in 1976 begonnen als ambitieus familiebedrijf door Paul en Marina Boeren, kent inmiddels een gevestigde en gerenommeerde naam binnen de markt van diabetesspecialisten.\n\nDennis en Dave Boeren, zonen van Paul en Marina Boeren, zijn actief binnen de organisatie en hebben door de jaren heen veel ervaring en kennis binnen de branche opgedaan. Dennis en Dave zijn vastbesloten het succes van Boeren Medical voort te zetten, met als doel het leven van mensen met diabetes makkelijker te maken. Boeren Medical is een professionele organisatie met ruim 80 enthousiaste medewerkers die over uitzonderlijk veel kennis op het gebied van diabetes en diabeteshulpmiddelen beschikken.\n\nWanneer u diabeteshulpmiddelen nodig heeft bent u bij Boeren Medical aan het juiste adres. Boeren Medical stelt hoge eisen aan de kwaliteit van haar producten en service. We beschikken over een breed assortiment, maar ook staan uitstekende vak- kennis, uitgebreide service, professionele dienstverlening en deskundig persoonlijk advies voorop. Hulpmiddelen die worden vergoed door uw zorgverzekeraar declareren wij rechtstreeks voor u. Hier heeft u dus geen omkijken naar.\n </string>
    <string name="Text_OverBoeren_webshop">Boeren Medical beschikt over een uitgebreide webshop voor diabeteshulpmiddelen en ALD artikelen (algemene dagelijkse levensverrichtingen), toegankelijk voor iedereen. Wanneer uw diabeteshulpmiddelen worden vergoed, wordt dit rechtstreeks gedeclareerd bij de verzekeraar door Boeren Medical.\n\nWorden uw hulpmiddelen niet vergoed? Dan bent u ook bij ons aan het juiste adres. Wij leveren namelijk tegen de laagste prijzen van Nederland.\n\n</string>
    <string name="Text_OverBoeren_diabetes">Boeren Medical heeft een uitgebreide informatiebrochure van maar liefst 148 pagina’s dik gemaakt, waarin alle informatie omtrent diabetes is gebundeld. De brochure is bedoeld als informatievoorzieningen voor klanten, maar ook andere geinteresseerden. U kunt het boek digitaal raadplegen via: www.boerenmedical.nl/lees-meer-over-diabetes.
Wilt u het boek thuis ontvangen? Neem dan contact op met onze klantenservice via 0800 099 66 40.\n</string>
    <string name="Text_OverBoeren_diabetes_service">Wij willen graag het leven van mensen met diabetes makkelijker maken. het zou voor ons heel makkelijk zijn om alleen maar de diabeteshulpmiddelen te leveren, maar dat zit niet in onze aard. Vandaar dat wij ook het diabetes service spreekuur aanbieden. in dat spreekuur helpen wij u verder een keuze te maken uit de verschillende diabeteshulpmiddelen die er zijn. We kijken wat het beste bij u past en wij zullen u, in overleg met uw behandelaar of diabetesverpleegkundige verder begeleiden met het gebruik van deze hulpmiddelen.\n\nHet Diabetes Service Spreekuur zal worden uitgevoerd door één van onze specialistische medewerkers. Tijdens het spreekuur voor- zien wij u van de nodige informatie over de diabeteshulpmiddelen die u in het dagelijkse leven gebruikt of wellicht gaat gebruiken.\n\nOnze diabetesverpleegkundigen beschikken over zeer ruime kennis op het gebied van diabeteshulpmiddelen en kunnen u dus van professionele begeleiding voorzien, onaf- hankelijk van de behandelmethode die voor u van toepassing is. Uiteraard beantwoorden wij ook eventuele andere vragen.\n\nBoeren Medical verzorgt deze Diabetes Service Spreekuren regelmatig op verschillende locaties in Nederland, bijvoorbeeld in opdracht van huisartsenpraktijken, gezondheidscentra en ziekenhuizen. in principe kan elke zorg- verlener, dus ook úw behandelaar zich aan- sluiten bij het Diabetes Service Spreekuur van Boeren Medical.\n\nUw behandelaar kan het Diabetes Service Spreekuur gemakkelijk aanvragen via Boeren Medical. Heeft u interesse? Laat dit dan weten aan uw behandelaar en vraag hem of haar contact met ons op te nemen via 0800 099 66 40.\n</string>
    <string name="Text_bluetoothmeter_koppelen">Volg onderstaande stappen om uw bloedglucosemeter voor de eerste keer met uw smartphone of tablet te koppelen. U hoeft dit maar één keer te doen, hierna zal de meter automatisch verbinding maken met uw smartphone of tablet.\n\n1. Start met de bloedglucosemeter uit.\n\n2. Druk met een pen op de SET knop, op de achterkant van de bloedglucosemeter.\n\n3. Na 12 keer drukken staat er PAr.\n\n4. Druk nu op de hoofdknop op de voorkant van de meter, zodat er yes staat.\n\n5. Druk nu weer op de SET knop om de instelling op te slaan.\n\n6. Er verschijnt CLr, en de meter sluit zichzelf af. Het blauwe Bluetooth lampje begint te knipperen.\n\n7. Open de Instellingen App op uw smartphone of tablet.\n\n8. Ga naar Bluetooth.\n\n9. Zorg dat Bluetooth ingeschakeld is.\n\n10. Selecteer bij Apparaten de DIAMOND MOBILE.\n\n11. De koppeling is gelukt!\n\nVoor meer informatie kunt u de handleiding van uw bloedglucosemeter raadplegen.\n\n<b>Let op:</b> Als u een V4 bloedglucusemeter hebt volg de onderstande stappen.\n\n1. Zet de bluetooth op uw telefoon aan.\n\n2. Zet uw bloedglucosemeter aan door middel van de grote knop op de voorzijde.\n\n3.	Zet uw bloedglucosemeter meteen daarna weer uit.\n\n4. U gaat in de app naar Instellingen > Koppelen met V4 meter> En drukt op zoeken. De telefoon zoekt dan automatisch naar een apparaat met bluetooth, in dit geval dus uw meter.\n\n5. Er verschijnt een pop-up met daarop Diamond Mobile. Klik hier op toevoegen.\n\n6. In het menu Bluetooth staat uw meter automatisch weergegeven. Klik op maak verbinding en volg de instructies die de app geeft.\n\n7. Daarna is uw meter verbonden en zijn er een aantal opties mogelijk, waaronder het synchroniseren van (enkele of alle) metingen uit uw meter. Ook kunt u hier alle gegevens verwijderen van uw meter en kunt u de meter afsluiten zodat de bluetooth verbinding verbroken wordt. </string>
    <string name="Text_app_instellen">Zodra uw smartphone of tablet is gekoppeld met de bloedglucosemeter zal er automatisch verbinding worden gemaakt als de bloedglucosemeter wordt uitgeschakeld. U kunt vanaf dan meetmomenten importeren naar uw diabetesdagboek.\n\n</string>
    <string name="Text_geschikte_apparaten">* BM Diamond Mini\n</string>
    <string name="measurement_type">Type meeteng:</string>
    <string name="bg_value">BG(mmmol/L):</string>
    <string name="selectmeter_value">Selecteer om meting aan uw dagboek toe te voegen</string>
    <string name="thermometer_value">Body Temperature(°C):</string>
    <string name="spO2_value">spO2:</string>
    <string name="gender_value">Gender:</string>
    <string name="age_value">Age:</string>
    <string name="height_value">Height:</string>
    <string name="weight_value">Weight:</string>
    <string name="bmi_value">BMI:</string>
    <string name="bmr_value">BMR:</string>
    <string name="bf_value">BF:</string>
    <string name="sys_value">Systolic(mmHg):</string>
    <string name="dia_value">Diastolic(mmHg):</string>
    <string name="pul_value">Pulse(beast/min):</string>
    <string name="ihb_value">IHB:</string>
    <string name="measurement_date">Meet Datum:</string>
    <string name="yes">Ja</string>
    <string name="cancel">Annuleer</string>
</resources>