<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="boeren.com.boeren.app.bmedical.boeren.fragments.BluetoothmeterFragment">

    <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
        android:id="@+id/title_bluetoothmeter_koppelen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:text="@string/title_bluetoothmeter_koppelen"
        style="@style/TextViewAppearance.Display1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bluetoothmeter_koppelen"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:text="@string/title_bluetoothmeter_koppelen_eerste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
           style="@style/TextViewAppearance.Headline2"
            />
        <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:id="@+id/tv_eerster_koppelen"
            android:text="@string/Text_bluetoothmeter_koppelen"
            style="@style/TextViewAppearance.Body1"
            />
        <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:text="@string/title_bluetoothmeter_koppelen_appinstellen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
            style="@style/TextViewAppearance.Headline2"
            />
        <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:id="@+id/tv_eerster_koppelen_appinstellen"
            android:text="@string/Text_app_instellen"
            style="@style/TextViewAppearance.Body1"
            />
        <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:text="@string/title_bluetoothmeter_koppelen_geschikte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
            style="@style/TextViewAppearance.Headline2"
            />
        <boeren.com.appsuline.app.bmedical.appsuline.font.DinProTextView
            android:id="@+id/tv_bluetoothgeschikte_app"
            android:text="@string/Text_geschikte_apparaten"
            style="@style/TextViewAppearance.Body1"
            />
        <Button
            android:id="@+id/btnv4meterconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Koppel met V4 Meter"
            android:layout_marginTop="5sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/UIButton"
            />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
