<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_margin="20dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/dialog"
    android:background="@drawable/dialog_background"
    android:padding="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/dialog_title_meter" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/dialog_text_meterdelete" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:layout_gravity="start"
            android:text="@string/cancel"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
            style="@style/UIButton"
            />

        <Button
            android:id="@+id/btnopen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:layout_gravity="end"
            android:text="@string/yes"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
            style="@style/UIButton"
            />
    </FrameLayout>
</LinearLayout>